AC_INIT(11pm, 0.1)
AC_CONFIG_SRCDIR(src/11pm/11pm.c)
AM_INIT_AUTOMAKE([-Wall -Werror foreign subdir-objects])

AC_PROG_CC
AM_PROG_AR
LT_INIT

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
  Makefile
  lib/Makefile
  lib/lib23package/Makefile
  lib/lib23repo/Makefile
  lib/lib23core/Makefile
  lib/lib11pm/Makefile
  src/11pm/Makefile
])
AC_OUTPUT
